# Axum-Rust-Starter

./: .env  .gitignore  Cargo.toml  LICENCE.md  Makefile.toml  readme.md  settings.json
src/: main.rs
src/auth/: mod.rs
src/auth/routes/: auth_routes.rs
src/auth/services/: auth_service.rs
src/config/: database.rs
src/dto/: token_dto.rs  user_dto.rs
src/error/: api_error.rs  request_error.rs
src/handler/: auth_handler.rs
src/middleware/: auth.rs
src/routes/: auth.rs  mod.rs
src/shared/config/: configuration.rs  database.rs  mod.rs  module_options.rs
src/shared/logger/: mod.rs
src/shared/request-context/: request-context-utils.rs  request-context.rs
src/user/: mod.rs
